--- a/3 Data Preparation.ipynb
+++ b/3 Data Preparation.ipynb
@@ -304,7 +304,7 @@
     }
    ],
    "source": [
-    "# impute null values with the median in categorical variables \n",
+    "# show number of null values per column in numerical variables\n",
     "numerical = data.select_dtypes(include=['float64', 'int64'])\n",
     "numerical = numerical[numerical.columns[1:15]]\n",
     "numerical.columns\n",
@@ -317,6 +317,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# fill nulls with median in numerical variables\n",
     "for col in numerical.columns:\n",
     "    m = data[col].median()\n",
     "    data[col] = data[col].fillna(m)"
@@ -353,6 +354,7 @@
     }
    ],
    "source": [
+    "# verify that there are not nulls \n",
     "data[numerical.columns].isnull().sum()"
    ]
   },
@@ -381,6 +383,7 @@
     }
    ],
    "source": [
+    "# show the null values in categorical variables\n",
     "cat = data.select_dtypes(exclude=['float64', 'int64'])\n",
     "data[cat.columns].isnull().sum()"
    ]
@@ -391,6 +394,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# fill nulls with the mode in the categorical features\n",
     "for col in cat.columns:\n",
     "    mode = data[col].mode()[0]\n",
     "    data[col] = data[col].fillna(mode)"
@@ -421,6 +425,7 @@
     }
    ],
    "source": [
+    "# verify that there are no nulls\n",
     "data[cat.columns].isnull().sum()"
    ]
   },
@@ -438,6 +443,7 @@
     }
    ],
    "source": [
+    "# no nulls in the whole dataset\n",
     "print('number of null values in the whole dataset:', data.isnull().sum().sum())"
    ]
   },
