--- a/4 Which are the most expensive neighborhoods in Boston.ipynb
+++ b/4 Which are the most expensive neighborhoods in Boston.ipynb
@@ -1209,6 +1209,7 @@
     }
    ],
    "source": [
+    "# histograms of price per accommodate per neighborhood\n",
     "for neigh in n['neighborhood'].unique():\n",
     "    n[n['neighborhood'] == neigh]['price per accommodate'].hist()\n",
     "    plt.title('price per accommodate in ' + neigh)\n",
@@ -1232,6 +1233,7 @@
     }
    ],
    "source": [
+    "# boxplot price per accommodate by neighborhood sorted by the mean\n",
     "grouped = n.loc[:,['neighborhood', 'price per accommodate']] \\\n",
     "    .groupby(['neighborhood']) \\\n",
     "    .median() \\\n",
