--- a/6 What are the factors that influence the price of Boston Airbnb.ipynb
+++ b/6 What are the factors that influence the price of Boston Airbnb.ipynb
@@ -279,6 +279,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# keep only the columns with true values\n",
     "data = data.drop(['host_is_superhost_f', 'host_identity_verified_f'], axis=1)"
    ]
   },
@@ -343,7 +344,7 @@
     "plt.ylabel('price')\n",
     "plt.xlabel('n')\n",
     "plt.title('true vs predicted values random forest')\n",
-    "plt.savefig('figures/true_pred.png')\n",
+    "plt.savefig('figures/6_true_pred.png', bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -368,7 +369,7 @@
    "source": [
     "data['ppa'].hist()\n",
     "plt.title('price per accommodate')\n",
-    "plt.savefig('figures/ppa_hist.png')\n",
+    "plt.savefig('figures/6_ppa_hist.png', bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -402,7 +403,7 @@
     "print(data.shape)\n",
     "data['ppa'].hist()\n",
     "plt.title('price per accommodate < 200')\n",
-    "plt.savefig('figures/ppa_hist_under200.png')\n",
+    "plt.savefig('figures/6_ppa_hist_under200.png', bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -467,7 +468,7 @@
     "plt.ylabel('price')\n",
     "plt.xlabel('n')\n",
     "plt.title('true vs predicted values random forest')\n",
-    "plt.savefig('figures/true_pred_under200.png')\n",
+    "plt.savefig('figures/6_true_pred_under200.png', bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -555,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +576,7 @@
     "feature_importances.sort_values(by='importance', ascending=True).tail(20).plot.barh(color='m', figsize=(10,5))\n",
     "plt.title('top 20 features by feature importance - RF model')\n",
     "plt.tight_layout()\n",
-    "plt.savefig('figures/top20_features.png')\n",
+    "plt.savefig('figures/6_top20_features.png', bbox_inches='tight')\n",
     "plt.show()"
    ]
   }
